--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1"
+    "bootstrap": "^4.4.1",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^5.1.2"
   }
 }
