--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "normalize-scss": "^7.0.1",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2"
   }
