--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
+    "@types/react-loadable": "^5.5.3",
+    "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
     "normalize-scss": "^7.0.1",
     "react-loadable": "^5.5.0",
