--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
   "dependencies": {
     "@types/react-loadable": "^5.5.3",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.2.3",
     "bootstrap": "^4.4.1",
     "normalize-scss": "^7.0.1",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0"
   }
 }
