--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
         cmd: install
     - uses: borales/actions-yarn@v2.0.0
       with:
-        cmd: start:prod
+        cmd: build:prod
     - name: Log filesystem
       run: ls -a
