--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,17 +6,34 @@ on:
 
 jobs:
   build:
-    
+
     runs-on: ubuntu-latest
-   
+
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: borales/actions-yarn@v2.0.0
+    - name: Git checkout master
+      uses: actions/checkout@v2
+    
+    - name: Yarn install
+      uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install
-    - uses: borales/actions-yarn@v2.0.0
+
+    - name: Build production
+      uses: borales/actions-yarn@v2.0.0
       with:
         cmd: build:prod
+
+    - name: Git checkout gh-pages
+      uses: actions/checkout@v2
+      with:
+        path: gh-pages
+ 
+    - name: Remove all but build from filesystem
+      run: |
+        find . -mindepth 1 ! -regex '^./build\(/.*\)?' ! -regex '^./.git\(/.*\)?' -delete
+        mv ./build/* .
+        rm ./build
+
     - name: Log filesystem
       run: ls -a
