--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Remove all but build from filesystem
       run: |
         find . -mindepth 1 ! -regex '^./build\(/.*\)?' ! -regex '^./.git\(/.*\)?' ! -regex '^./node_modules\(/.*\)?' -delete
-        mv ./build/* . -f
+        sudo mv ./build/* .
         rm ./build
 
     - name: Log filesystem
