--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,12 @@ jobs:
         sudo mv ./build/* .
 
     - name: Log filesystem
-      run: ls -a
+      run: git status
+
+#     - name: Add files to staging and commit
+#       run: |
+#         git add
+#         git config --global user.name 'Github Action'
+#         git config --global user.email 'action@github.com'
+#         git commit -m "Automated deploy by github actions"
+#         git push
