--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,9 @@ jobs:
         sudo mv ./build/* .
 
     - name: Log filesystem
-      run: git status
+      run: |
+        git add -- . :!./node_modules
+        git status
 
 #     - name: Add files to staging and commit
 #       run: |
