--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,9 @@ jobs:
         cmd: build:prod
 
     - name: Git checkout gh-pages
-      run: git checkout gh-pages
-#       uses: actions/checkout@v2
-#       with:
-#         path: gh-pages
+      uses: actions/checkout@v2
+      with:
+        ref: gh-pages
  
     - name: Remove all but build from filesystem
       run: |
