--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
         git add -- . :!./node_modules
         git config --global user.name 'Github Action'
         git config --global user.email 'action@github.com'
-        git commit -m "Automated deploy by github actions"
+        git commit -m "Automated deploy by github actions" --allow-empty
         git push
