--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unnamed-game",
+  "name": "vakjargon-engels",
   "version": "1.0.0",
   "main": "src/index.tsx",
   "author": "Railly Koeiman <railly6@live.nl>",
